Implemented in OpenApi and added RBAC
